unpackaged/main/default/objects/Blood_Test__c/Blood_Test__c.object-meta.xml
<CustomObject>
    <label>Blood Test</label>
    <nameField>
        <displayFormat>BT-{000000}</displayFormat>
        <label>Blood Tests</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>