unpackaged/main/default/objects/Blood_Test__c/fields/Account_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_First_Name__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account First Name</label>
    <type>Text</type>
</CustomField>