unpackaged/main/default/objects/Blood_Test__c/fields/Additions__c.field-meta.xml
<CustomField>
    <fullName>Additions__c</fullName>
    <description>Additions to the blood test that are not usually included</description>
    <inlineHelpText>Additions to the blood test that are not usually included</inlineHelpText>
    <label>Additions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>