unpackaged/main/default/objects/Blood_Test__c/fields/Albumin__c.field-meta.xml
<CustomField>
    <fullName>Albumin__c</fullName>
    <label>Albumin</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>