unpackaged/main/default/objects/Blood_Test__c/fields/Albumin_Max__c.field-meta.xml
<CustomField>
    <fullName>Albumin_Max__c</fullName>
    <defaultValue>TEXT(50)</defaultValue>
    <label>Albumin Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>