unpackaged/main/default/objects/Blood_Test__c/fields/Albumin_Min__c.field-meta.xml
<CustomField>
    <fullName>Albumin_Min__c</fullName>
    <defaultValue>TEXT(35)</defaultValue>
    <label>Albumin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>