unpackaged/main/default/objects/Blood_Test__c/fields/Albumin_Units__c.field-meta.xml
<CustomField>
    <fullName>Albumin_Units__c</fullName>
    <defaultValue>&quot;g/L&quot;</defaultValue>
    <label>Albumin Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>