unpackaged/main/default/objects/Blood_Test__c/fields/ALP__c.field-meta.xml
<CustomField>
    <fullName>ALP__c</fullName>
    <label>ALP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>