unpackaged/main/default/objects/Blood_Test__c/fields/ALP_Max__c.field-meta.xml
<CustomField>
    <fullName>ALP_Max__c</fullName>
    <defaultValue>TEXT(130)</defaultValue>
    <label>ALP Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>