unpackaged/main/default/objects/Blood_Test__c/fields/ALP_Min__c.field-meta.xml
<CustomField>
    <fullName>ALP_Min__c</fullName>
    <defaultValue>TEXT(30)</defaultValue>
    <label>ALP Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>