unpackaged/main/default/objects/Blood_Test__c/fields/ALT__c.field-meta.xml
<CustomField>
    <fullName>ALT__c</fullName>
    <label>ALT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>