unpackaged/main/default/objects/Blood_Test__c/fields/ALT_Max__c.field-meta.xml
<CustomField>
    <fullName>ALT_Max__c</fullName>
    <defaultValue>TEXT(50)</defaultValue>
    <label>ALT Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>