unpackaged/main/default/objects/Blood_Test__c/fields/ALT_Min__c.field-meta.xml
<CustomField>
    <fullName>ALT_Min__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>ALT Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>