unpackaged/main/default/objects/Blood_Test__c/fields/ALT_Units__c.field-meta.xml
<CustomField>
    <fullName>ALT_Units__c</fullName>
    <defaultValue>&quot;U/L&quot;</defaultValue>
    <label>ALT Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>