unpackaged/main/default/objects/Blood_Test__c/fields/Analysis_Lab__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Lab__c</fullName>
    <label>Analysis Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>County Pathology</fullName>
            </value>
            <value>
                <fullName>Inuvi</fullName>
            </value>
            <value>
                <fullName>Randox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>