unpackaged/main/default/objects/Blood_Test__c/fields/Basophils__c.field-meta.xml
<CustomField>
    <fullName>Basophils__c</fullName>
    <label>Basophils</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>