unpackaged/main/default/objects/Blood_Test__c/fields/Basophils_Max__c.field-meta.xml
<CustomField>
    <fullName>Basophils_Max__c</fullName>
    <defaultValue>TEXT(0.10)</defaultValue>
    <label>Basophils Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>