unpackaged/main/default/objects/Blood_Test__c/fields/Basophils_Min__c.field-meta.xml
<CustomField>
    <fullName>Basophils_Min__c</fullName>
    <defaultValue>TEXT(0.00)</defaultValue>
    <label>Basophils Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>