unpackaged/main/default/objects/Blood_Test__c/fields/Basophils_percentage__c.field-meta.xml
<CustomField>
    <fullName>Basophils_percentage__c</fullName>
    <label>Basophils %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>