unpackaged/main/default/objects/Blood_Test__c/fields/Basophils_Units__c.field-meta.xml
<CustomField>
    <fullName>Basophils_Units__c</fullName>
    <defaultValue>&quot;x10^9/L&quot;</defaultValue>
    <label>Basophils Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>