unpackaged/main/default/objects/Blood_Test__c/fields/Bespoke_Meddx_Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Meddx_Kit_Type__c</fullName>
    <label>Bespoke Meddx Kit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KT173</fullName>
                <label>KT173 - FP yellow vial</label>
            </value>
            <value>
                <fullName>KT174</fullName>
                <label>KT174 - FP yellow and purple vial</label>
            </value>
            <value>
                <fullName>KT317</fullName>
                <label>KT317 - Venous yellow vial</label>
            </value>
            <value>
                <fullName>KT318</fullName>
                <label>KT318 - Venous yellow and purple vial</label>
            </value>
            <value>
                <fullName>KT285</fullName>
                <isActive>false</isActive>
                <label>KT285 - Venous yellow vial</label>
            </value>
            <value>
                <fullName>KT286</fullName>
                <isActive>false</isActive>
                <label>KT286 - Venous yellow and purple vial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>