unpackaged/main/default/objects/Blood_Test__c/fields/Bespoke_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Test_Type__c</fullName>
    <description>Type the code in format OPT123</description>
    <inlineHelpText>Type the code in format OPT123</inlineHelpText>
    <label>Bespoke Test Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>