unpackaged/main/default/objects/Blood_Test__c/fields/Cholesterol__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol__c</fullName>
    <label>Cholesterol</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>