unpackaged/main/default/objects/Blood_Test__c/fields/Cholesterol_Max__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol_Max__c</fullName>
    <defaultValue>TEXT(5.0)</defaultValue>
    <label>Cholesterol Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>