unpackaged/main/default/objects/Blood_Test__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <description>Method for collecting the blood sample</description>
    <inlineHelpText>Method for collecting the blood sample</inlineHelpText>
    <label>Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finger - Prick</fullName>
            </value>
            <value>
                <fullName>Venous</fullName>
            </value>
            <value>
                <fullName>Venous - Kit Only</fullName>
            </value>
            <value>
                <fullName>Venous - Randox</fullName>
            </value>
            <value>
                <fullName>Venous - Superdrug</fullName>
            </value>
            <value>
                <fullName>Venous - Goodbody</fullName>
            </value>
            <value>
                <fullName>Nurse Home Visit - Inuvi</fullName>
            </value>
            <value>
                <fullName>Nurse Home Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>