unpackaged/main/default/objects/Blood_Test__c/fields/Cortisol__c.field-meta.xml
<CustomField>
    <fullName>Cortisol__c</fullName>
    <label>Cortisol</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>