unpackaged/main/default/objects/Blood_Test__c/fields/Cortisol_Max__c.field-meta.xml
<CustomField>
    <fullName>Cortisol_Max__c</fullName>
    <defaultValue>TEXT(537)</defaultValue>
    <label>Cortisol Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>