unpackaged/main/default/objects/Blood_Test__c/fields/Cortisol_Min__c.field-meta.xml
<CustomField>
    <fullName>Cortisol_Min__c</fullName>
    <defaultValue>TEXT(133)</defaultValue>
    <label>Cortisol Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>