unpackaged/main/default/objects/Blood_Test__c/fields/Cortisol_Units__c.field-meta.xml
<CustomField>
    <fullName>Cortisol_Units__c</fullName>
    <defaultValue>&quot;nmol/L&quot;</defaultValue>
    <label>Cortisol Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>