unpackaged/main/default/objects/Blood_Test__c/fields/Creatine_Kinase__c.field-meta.xml
<CustomField>
    <fullName>Creatine_Kinase__c</fullName>
    <label>Creatine Kinase</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>