unpackaged/main/default/objects/Blood_Test__c/fields/Creatinine__c.field-meta.xml
<CustomField>
    <fullName>Creatinine__c</fullName>
    <label>Creatinine</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>