unpackaged/main/default/objects/Blood_Test__c/fields/Creatinine_Max__c.field-meta.xml
<CustomField>
    <fullName>Creatinine_Max__c</fullName>
    <defaultValue>TEXT(104)</defaultValue>
    <label>Creatinine Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>