unpackaged/main/default/objects/Blood_Test__c/fields/Creatinine_Min__c.field-meta.xml
<CustomField>
    <fullName>Creatinine_Min__c</fullName>
    <defaultValue>TEXT(59)</defaultValue>
    <label>Creatinine Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>