unpackaged/main/default/objects/Blood_Test__c/fields/Creatinine_Units__c.field-meta.xml
<CustomField>
    <fullName>Creatinine_Units__c</fullName>
    <defaultValue>&quot;umol/L&quot;</defaultValue>
    <label>Creatinine Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>