unpackaged/main/default/objects/Blood_Test__c/fields/CRP_High_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>CRP_High_Sensitivity__c</fullName>
    <description>CRP (Inflammation Test)</description>
    <inlineHelpText>CRP (Inflammation Test)</inlineHelpText>
    <label>CRP</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>