unpackaged/main/default/objects/Blood_Test__c/fields/DHEA_S__c.field-meta.xml
<CustomField>
    <fullName>DHEA_S__c</fullName>
    <label>DHEA-S</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>