unpackaged/main/default/objects/Blood_Test__c/fields/Dihydrotestosterone__c.field-meta.xml
<CustomField>
    <fullName>Dihydrotestosterone__c</fullName>
    <label>Dihydrotestosterone</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>