unpackaged/main/default/objects/Blood_Test__c/fields/Dispatch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date_Time__c</fullName>
    <description>Date &amp; Time Dispatch Confirmed</description>
    <inlineHelpText>Date &amp; Time Dispatch Confirmed</inlineHelpText>
    <label>Dispatch Date/Time</label>
    <type>DateTime</type>
</CustomField>