unpackaged/main/default/objects/Blood_Test__c/fields/eGFR_Max__c.field-meta.xml
<CustomField>
    <fullName>eGFR_Max__c</fullName>
    <defaultValue>TEXT(150)</defaultValue>
    <label>eGFR Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>