unpackaged/main/default/objects/Blood_Test__c/fields/eGFR_MDRD__c.field-meta.xml
<CustomField>
    <fullName>eGFR_MDRD__c</fullName>
    <label>eGFR (MDRD)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>