unpackaged/main/default/objects/Blood_Test__c/fields/eGFR_Min__c.field-meta.xml
<CustomField>
    <fullName>eGFR_Min__c</fullName>
    <defaultValue>TEXT(60)</defaultValue>
    <label>eGFR Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>