unpackaged/main/default/objects/Blood_Test__c/fields/eGFR_Units__c.field-meta.xml
<CustomField>
    <fullName>eGFR_Units__c</fullName>
    <defaultValue>&quot;ml/min/1.73m2&quot;</defaultValue>
    <label>eGFR Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>