unpackaged/main/default/objects/Blood_Test__c/fields/Eosinophils__c.field-meta.xml
<CustomField>
    <fullName>Eosinophils__c</fullName>
    <label>Eosinophils</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>