unpackaged/main/default/objects/Blood_Test__c/fields/Eosinophils_Max__c.field-meta.xml
<CustomField>
    <fullName>Eosinophils_Max__c</fullName>
    <defaultValue>TEXT(0.40)</defaultValue>
    <label>Eosinophils Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>