unpackaged/main/default/objects/Blood_Test__c/fields/Eosinophils_Min__c.field-meta.xml
<CustomField>
    <fullName>Eosinophils_Min__c</fullName>
    <defaultValue>TEXT(0.00)</defaultValue>
    <label>Eosinophils Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>