unpackaged/main/default/objects/Blood_Test__c/fields/Eosinophils_percentage__c.field-meta.xml
<CustomField>
    <fullName>Eosinophils_percentage__c</fullName>
    <label>Eosinophils %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>