unpackaged/main/default/objects/Blood_Test__c/fields/Failed_Values__c.field-meta.xml
<CustomField>
    <fullName>Failed_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Values?</label>
    <type>Checkbox</type>
</CustomField>