unpackaged/main/default/objects/Blood_Test__c/fields/Ferritin__c.field-meta.xml
<CustomField>
    <fullName>Ferritin__c</fullName>
    <label>Ferritin</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>