unpackaged/main/default/objects/Blood_Test__c/fields/Ferritin_Units__c.field-meta.xml
<CustomField>
    <fullName>Ferritin_Units__c</fullName>
    <defaultValue>&quot;ug/L&quot;</defaultValue>
    <label>Ferritin Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>