unpackaged/main/default/objects/Blood_Test__c/fields/Film_Report__c.field-meta.xml
<CustomField>
    <fullName>Film_Report__c</fullName>
    <label>Film Report</label>
    <length>200</length>
    <type>Text</type>
</CustomField>