unpackaged/main/default/objects/Blood_Test__c/fields/Free_Androgen_Index__c.field-meta.xml
<CustomField>
    <fullName>Free_Androgen_Index__c</fullName>
    <label>Free Androgen Index</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>