unpackaged/main/default/objects/Blood_Test__c/fields/Free_T4__c.field-meta.xml
<CustomField>
    <fullName>Free_T4__c</fullName>
    <label>Free T4</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>