unpackaged/main/default/objects/Blood_Test__c/fields/Free_T4_Max__c.field-meta.xml
<CustomField>
    <fullName>Free_T4_Max__c</fullName>
    <defaultValue>TEXT(22.0)</defaultValue>
    <label>Free T4 Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>