unpackaged/main/default/objects/Blood_Test__c/fields/Free_T4_Min__c.field-meta.xml
<CustomField>
    <fullName>Free_T4_Min__c</fullName>
    <defaultValue>TEXT(12.0)</defaultValue>
    <label>Free T4 Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>