unpackaged/main/default/objects/Blood_Test__c/fields/Free_T4_Units__c.field-meta.xml
<CustomField>
    <fullName>Free_T4_Units__c</fullName>
    <defaultValue>&quot;pmol/L&quot;</defaultValue>
    <label>Free T4 Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>