unpackaged/main/default/objects/Blood_Test__c/fields/Free_Test__c.field-meta.xml
<CustomField>
    <fullName>Free_Test__c</fullName>
    <label>Free Test?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free 3rd Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>