unpackaged/main/default/objects/Blood_Test__c/fields/Free_Testosterone__c.field-meta.xml
<CustomField>
    <fullName>Free_Testosterone__c</fullName>
    <description>Calculated Free Testosterone</description>
    <inlineHelpText>Calculated Free Testosterone</inlineHelpText>
    <label>Free Testosterone</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>