unpackaged/main/default/objects/Blood_Test__c/fields/Free_Testosterone_Max__c.field-meta.xml
<CustomField>
    <fullName>Free_Testosterone_Max__c</fullName>
    <defaultValue>TEXT(0.650)</defaultValue>
    <label>Free Testosterone Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>