unpackaged/main/default/objects/Blood_Test__c/fields/Free_Testosterone_Min__c.field-meta.xml
<CustomField>
    <fullName>Free_Testosterone_Min__c</fullName>
    <defaultValue>TEXT(0.226)</defaultValue>
    <label>Free Testosterone Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>