unpackaged/main/default/objects/Blood_Test__c/fields/Free_Testosterone_Units__c.field-meta.xml
<CustomField>
    <fullName>Free_Testosterone_Units__c</fullName>
    <defaultValue>&quot;nmol/L&quot;</defaultValue>
    <label>Free Testosterone Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>