unpackaged/main/default/objects/Blood_Test__c/fields/FSH__c.field-meta.xml
<CustomField>
    <fullName>FSH__c</fullName>
    <label>FSH</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>