unpackaged/main/default/objects/Blood_Test__c/fields/FSH_Max__c.field-meta.xml
<CustomField>
    <fullName>FSH_Max__c</fullName>
    <defaultValue>TEXT(12.4)</defaultValue>
    <label>FSH Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>