unpackaged/main/default/objects/Blood_Test__c/fields/FSH_Min__c.field-meta.xml
<CustomField>
    <fullName>FSH_Min__c</fullName>
    <defaultValue>TEXT(1.5)</defaultValue>
    <label>FSH Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>