unpackaged/main/default/objects/Blood_Test__c/fields/GGT__c.field-meta.xml
<CustomField>
    <fullName>GGT__c</fullName>
    <label>GGT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>