unpackaged/main/default/objects/Blood_Test__c/fields/GGT_Max__c.field-meta.xml
<CustomField>
    <fullName>GGT_Max__c</fullName>
    <defaultValue>TEXT(61)</defaultValue>
    <label>GGT Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>