unpackaged/main/default/objects/Blood_Test__c/fields/GGT_Min__c.field-meta.xml
<CustomField>
    <fullName>GGT_Min__c</fullName>
    <defaultValue>TEXT(8)</defaultValue>
    <label>GGT Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>