unpackaged/main/default/objects/Blood_Test__c/fields/GGT_Units__c.field-meta.xml
<CustomField>
    <fullName>GGT_Units__c</fullName>
    <defaultValue>&quot;U/L&quot;</defaultValue>
    <label>GGT Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>