unpackaged/main/default/objects/Blood_Test__c/fields/Globulin__c.field-meta.xml
<CustomField>
    <fullName>Globulin__c</fullName>
    <label>Globulin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>