unpackaged/main/default/objects/Blood_Test__c/fields/Globulin_Max__c.field-meta.xml
<CustomField>
    <fullName>Globulin_Max__c</fullName>
    <defaultValue>TEXT(35)</defaultValue>
    <label>Globulin Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>