unpackaged/main/default/objects/Blood_Test__c/fields/Globulin_Min__c.field-meta.xml
<CustomField>
    <fullName>Globulin_Min__c</fullName>
    <defaultValue>TEXT(19)</defaultValue>
    <label>Globulin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>