unpackaged/main/default/objects/Blood_Test__c/fields/Glucose__c.field-meta.xml
<CustomField>
    <fullName>Glucose__c</fullName>
    <label>Glucose</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>