unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit__c</fullName>
    <label>Haematocrit</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>