unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Adj__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Adj__c</fullName>
    <label>Haematocrit (Adj)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>