unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Max__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Max__c</fullName>
    <defaultValue>TEXT(0.500)</defaultValue>
    <label>Haematocrit Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>