unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Max_Adj__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Max_Adj__c</fullName>
    <label>Haematocrit Max (Adj)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>