unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Min__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Min__c</fullName>
    <defaultValue>TEXT(0.380)</defaultValue>
    <label>Haematocrit Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>