unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Min_Adj__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Min_Adj__c</fullName>
    <label>Haematocrit Min (Adj)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>