unpackaged/main/default/objects/Blood_Test__c/fields/Haematocrit_Units__c.field-meta.xml
<CustomField>
    <fullName>Haematocrit_Units__c</fullName>
    <defaultValue>&quot;L/L&quot;</defaultValue>
    <label>Haematocrit Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>