unpackaged/main/default/objects/Blood_Test__c/fields/Haemoglobin__c.field-meta.xml
<CustomField>
    <fullName>Haemoglobin__c</fullName>
    <label>Haemoglobin</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>