unpackaged/main/default/objects/Blood_Test__c/fields/Haemoglobin_Max__c.field-meta.xml
<CustomField>
    <fullName>Haemoglobin_Max__c</fullName>
    <defaultValue>TEXT(170)</defaultValue>
    <label>Haemoglobin Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>