unpackaged/main/default/objects/Blood_Test__c/fields/Haemoglobin_Min__c.field-meta.xml
<CustomField>
    <fullName>Haemoglobin_Min__c</fullName>
    <defaultValue>TEXT(130)</defaultValue>
    <label>Haemoglobin Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>