unpackaged/main/default/objects/Blood_Test__c/fields/Haemoglobin_Units__c.field-meta.xml
<CustomField>
    <fullName>Haemoglobin_Units__c</fullName>
    <defaultValue>&quot;g/L&quot;</defaultValue>
    <label>Haemoglobin Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>