unpackaged/main/default/objects/Blood_Test__c/fields/HbA1c__c.field-meta.xml
<CustomField>
    <fullName>HbA1c__c</fullName>
    <label>HbA1c</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>