unpackaged/main/default/objects/Blood_Test__c/fields/HbA1c_Max__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Max__c</fullName>
    <defaultValue>TEXT(42)</defaultValue>
    <label>HbA1c Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>