unpackaged/main/default/objects/Blood_Test__c/fields/HbA1c_Min__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Min__c</fullName>
    <defaultValue>TEXT(20)</defaultValue>
    <label>HbA1c Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>