unpackaged/main/default/objects/Blood_Test__c/fields/HbA1c_Units__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Units__c</fullName>
    <defaultValue>&quot;mmol/mol&quot;</defaultValue>
    <label>HbA1c Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>