unpackaged/main/default/objects/Blood_Test__c/fields/HDL__c.field-meta.xml
<CustomField>
    <fullName>HDL__c</fullName>
    <label>HDL</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>