unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Cholesterol_ratio__c.field-meta.xml
<CustomField>
    <fullName>HDL_Cholesterol_ratio__c</fullName>
    <label>HDL Cholesterol ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>