unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Cholesterol_ratio_Max__c.field-meta.xml
<CustomField>
    <fullName>HDL_Cholesterol_ratio_Max__c</fullName>
    <defaultValue>TEXT(5.0)</defaultValue>
    <label>HDL Cholesterol ratio Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>