unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Cholesterol_ratio_Min__c.field-meta.xml
<CustomField>
    <fullName>HDL_Cholesterol_ratio_Min__c</fullName>
    <defaultValue>TEXT(0.0)</defaultValue>
    <label>HDL Cholesterol ratio Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>