unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Cholesterol_ratio_Units__c.field-meta.xml
<CustomField>
    <fullName>HDL_Cholesterol_ratio_Units__c</fullName>
    <defaultValue>&quot;ratio&quot;</defaultValue>
    <label>HDL Cholesterol ratio Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>