unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Max__c.field-meta.xml
<CustomField>
    <fullName>HDL_Max__c</fullName>
    <defaultValue>TEXT(1.7)</defaultValue>
    <label>HDL Max</label>
    <length>20</length>
    <type>Text</type>
</CustomField>