unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Min__c.field-meta.xml
<CustomField>
    <fullName>HDL_Min__c</fullName>
    <defaultValue>TEXT(0.9)</defaultValue>
    <label>HDL Min</label>
    <length>20</length>
    <type>Text</type>
</CustomField>