unpackaged/main/default/objects/Blood_Test__c/fields/HDL_of_Total__c.field-meta.xml
<CustomField>
    <fullName>HDL_of_Total__c</fullName>
    <label>HDL % of Total</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>