unpackaged/main/default/objects/Blood_Test__c/fields/HDL_of_Total_Field_Max__c.field-meta.xml
<CustomField>
    <fullName>HDL_of_Total_Field_Max__c</fullName>
    <defaultValue>TEXT(100)</defaultValue>
    <label>HDL % of Total Field Max</label>
    <length>80</length>
    <type>Text</type>
</CustomField>