unpackaged/main/default/objects/Blood_Test__c/fields/HDL_of_Total_Min__c.field-meta.xml
<CustomField>
    <fullName>HDL_of_Total_Min__c</fullName>
    <defaultValue>TEXT(20)</defaultValue>
    <label>HDL % of Total Min</label>
    <length>80</length>
    <type>Text</type>
</CustomField>