unpackaged/main/default/objects/Blood_Test__c/fields/HDL_Unit__c.field-meta.xml
<CustomField>
    <fullName>HDL_Unit__c</fullName>
    <defaultValue>&quot;%&quot;</defaultValue>
    <label>HDL % Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>