unpackaged/main/default/objects/Blood_Test__c/fields/HL7_Results_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>HL7_Results_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HL7 Results Uploaded</label>
    <type>Checkbox</type>
</CustomField>