unpackaged/main/default/objects/Blood_Test__c/fields/IGF_1__c.field-meta.xml
<CustomField>
    <fullName>IGF_1__c</fullName>
    <label>IGF-1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>