unpackaged/main/default/objects/Blood_Test__c/fields/Internal_Dispatch_Order__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dispatch_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal dispatch order (does not go to Meddx)</description>
    <inlineHelpText>Internal dispatch order (does not go to Meddx)</inlineHelpText>
    <label>Internal Dispatch Order</label>
    <type>Checkbox</type>
</CustomField>