unpackaged/main/default/objects/Blood_Test__c/fields/Iron__c.field-meta.xml
<CustomField>
    <fullName>Iron__c</fullName>
    <label>Iron</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>