unpackaged/main/default/objects/Blood_Test__c/fields/Is_First_Blood_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Blood_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies whether Blood Test is first blood test (not replacement), referenced in Flow and report</description>
    <label>Is First Blood Test</label>
    <type>Checkbox</type>
</CustomField>