unpackaged/main/default/objects/Blood_Test__c/fields/Is_Trigger_PDF__c.field-meta.xml
<CustomField>
    <fullName>Is_Trigger_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trigger PDF</label>
    <type>Checkbox</type>
</CustomField>