unpackaged/main/default/objects/Blood_Test__c/fields/Kit_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Kit_Tracking_ID__c</fullName>
    <label>Kit Tracking ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>