unpackaged/main/default/objects/Blood_Test__c/fields/Kit_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Kit_Tracking_Link__c</fullName>
    <label>Kit Tracking Link</label>
    <type>Url</type>
</CustomField>